# simple

./: .clang-format  .gitignore  CMakeLists.txt  Makefile
include/: AST.h  IRGenerator.h  Lexer.h  Parser.h  SemanticAnalyzer.h
lib/: runtime.cpp
src/: IRGenerator.cpp  Lexer.cpp  Main.cpp  Parser.cpp  SemanticAnalyzer.cpp  simple.cpp
test/: input
